# OpenCV-TP

./: README.md
INF573Lab1/: CMakeLists.txt  images.cpp
INF573Lab2/: CMakeLists.txt  backup(n).pages  backup.pages
INF573Lab2/Lab2 - final/: canny.cpp
INF573Lab3/: test.py
