CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

set(CMAKE_BUILD_TYPE Release)
SET(OpenCV_STATIC OFF)
FIND_PACKAGE(OpenCV REQUIRED)

PROJECT(TP1)

# ADD_EXECUTABLE(sample sample.cpp)

INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
ADD_EXECUTABLE(images images.cpp)
TARGET_LINK_LIBRARIES(images ${OpenCV_LIBS})
